--- a/Calc/css/styles.css
+++ b/Calc/css/styles.css
@@ -1,115 +1,204 @@
 @charset "UTF-8";
 
-html, body {
-  display: compact;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(to left, #606c88 , #ab3d77);
-  
-  font-family: 'Oswald', sans-serif;
+@font-face {
+	src: url("fonts/Rage/rage italic.ttf");
+	font-family: rage;
+}
+
+html {
+	background: linear-gradient(to right, #606c88, #04b7fb);
+	font-family: 'Oswald', sans-serif;
+	display: block;
+	justify-content: center;
+	align-items: center;
+}
+
+body {
+  	width: 1000px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .button {
-  text-align: center;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-size: 20px;
-  letter-spacing: 4px;
-  position: relative;
-  background-color: #16a085;
-  border: none;
-  color: #fff;
-  padding: 0px;
+	text-align: center;
+	text-transform: uppercase;
+	cursor: pointer;
+	font-size: 20px;
+	letter-spacing: 4px;
+	position: relative;
+	background-color: #16a085;
+	border: none;
+	color: #fff;
+	padding: 0px;
 	width: 100%;
 	height: 100%;
-  text-align: center;
-  transition-duration: 0.4s;
-  overflow: hidden;
-  box-shadow: 0 5px 15px #193047;
-  border-radius: 4px;
+	text-align: center;
+	transition-duration: 0.4s;
+	overflow: hidden;
+	box-shadow: 0 5px 15px #193047;
+	border-radius: 4px;
 }
 
 .button:hover {
-  background: #fff;
-  box-shadow: 0px 2px 10px 5px #1abc9c;
-  color: #000;
+	background: #fff;
+	box-shadow: 0px 2px 10px 5px #1abc9c;
+	color: #000;
 }
 
 .button:after {
-  content: "";
-  background: #1abc9c;
-  display: block;
-  position: absolute;
-  padding-top: 300%;
-  padding-left: 350%;
-  margin-left: -20px !important;
-  margin-top: -120%;
-  opacity: 0;
-  transition: all 0.8s
+	content: "";
+	background: #1abc9c;
+	display: block;
+	position: absolute;
+	padding-top: 300%;
+	padding-left: 350%;
+	margin-left: -20px !important;
+	margin-top: -120%;
+	opacity: 0;
+	transition: all 0.8s
 }
 
 .button:disabled {
-  background-color: #666666;
-  color: #fff;
-  transition-duration: 0.4s;
-  overflow: hidden;
-  box-shadow: 0 5px 15px #193047;
-  border-radius: 4px;	
+	background-color: #666666;
+	color: #fff;
+	transition-duration: 0.4s;
+	overflow: hidden;
+	box-shadow: 0 5px 15px #193047;
+	border-radius: 4px;
 }
 
 .button:disabled:hover {
-  background: #666666;
-  box-shadow: 0px;
-  color: #fff;
+	background: #666666;
+	box-shadow: 0px;
+	color: #fff;
 }
 
 .button:active:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s
+	padding: 0;
+	margin: 0;
+	opacity: 1;
+	transition: 0s
 }
 
-.button:focus { outline:0; }
+.button:focus {
+	outline: 0;
+}
 
 /* =========================================================== */
 
 .tab {
 	width: 800px;
-	border-spacing: 5px;
+	border-spacing: 10px;
+	margin-left: 100px;
+	table-layout: fixed;
 }
 
 th, td {
-	width: 100px;
+	width: 20%;
 	height: 50px;
 }
 
-h7 {
-  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-  font-size: 70px;
-  padding: 80px 50px;
-  text-transform: uppercase;
-  text-rendering: optimizeLegibility;
-    color: #131313;
-    letter-spacing: .1em;
-    text-shadow: 
-      1px -1px 0 #076361, 
-      -1px 2px 1px #0a7673, 
-      -2px 4px 1px #0b8a87, 
-      -3px 6px 1px #0c9e9b, 
-      -4px 8px 1px #0db3ae, 
-      -5px 10px 1px #0fc6c1;
+.display {
+	width: 80%;
+	padding: 0;
+}
+
+.firstLine {
+	height: 100px;
+}
+
+input {	
+	background: transparent;
+	text-align: right;
+	border: none;
+	height: 100%;
+	width: 100%;
+	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic,
+		"AppleGothic", sans-serif;
+	font-size: 70px;
+	text-transform: uppercase;
+	text-rendering: optimizeLegibility;
+	color: #131313;
+	letter-spacing: .1em;
+	text-shadow: 1px -1px 0 #076361, -1px 2px 1px #0a7673, -2px 4px 1px
+		#0b8a87, -3px 6px 1px #0c9e9b, -4px 8px 1px #0db3ae, -5px 10px 1px
+		#0fc6c1;
 }
 
 .err {
-	text-shadow: 
-      1px -1px 0 #6a0003, 
-      -1px 2px 1px #950004, 
-      -2px 4px 1px #bf0005, 
-      -3px 6px 1px #ea0006, 
-      -4px 8px 1px #ff151c, 
-      -5px 10px 1px #ff4045;
+	text-shadow: 1px -1px 0 #6a0003, -1px 2px 1px #950004, -2px 4px 1px
+		#bf0005, -3px 6px 1px #ea0006, -4px 8px 1px #ff151c, -5px 10px 1px
+		#ff4045;
 }
 
 /* ======================================================================== */
+.area {
+  margin-left: 120px;
+  text-align: center;
+  font-size: 2em;
+  color: #fff;
+  letter-spacing: 2px;
+  font-weight: 700;
+  text-transform: uppercase;
+  animation: blur 1.5s ease-out infinite;
+  text-shadow: 0px 0px 5px #fff, 0px 0px 7px #fff;
+}
+
+@keyframes blur {
+  from {
+    text-shadow:0px 0px 10px #fff,
+      0px 0px 10px #fff, 
+      0px 0px 15px #fff,
+      0px 0px 15px #fff,
+      0px 0px 15px #fff,
+      0px 0px 15px #fff,
+      0px 0px 15px #fff,
+      0px 0px 15px #fff,
+      0px 0px 30px #fff,
+      0px 0px 30px #fff,
+      0px 0px 30px #7B96B8,
+      0px 0px 90px #7B96B8,
+      0px 10px 60px #7B96B8,
+      0px 10px 60px #7B96B8,
+      0px 10px 60px #7B96B8,
+      0px 10px 60px #7B96B8,
+      0px -10px 60px #7B96B8,
+      0px -10px 60px #7B96B8;
+  }
+}
+
+/* ========================================================================= */
+
+
+header {
+	text-align:center;
+  	width: 1000px;
+  	margin: 20px auto 0 auto;
+ 	padding-top: 50px;
+ 	padding-bottom: 30px;
+	font-family: rage;
+	color: #fff;
+	font-size: 50px;
+	animation: anim 2s alternate infinite;
+    text-shadow:0px 0px 20px #f37eb6,
+	0px 0px 20px #f37eb6,
+	0px 0px 20px #f37eb6,
+	0px 0px 20px #f37eb6,
+	0px 0px 20px #f37eb6,
+	0px 0px 20px #f37eb6;
+	transform: rotate(-10deg);
+  /* Safari */
+  -webkit-transform: rotate(-10deg);
+
+  /* Firefox */
+  -moz-transform: rotate(-10deg);
+
+  /* IE */
+  -ms-transform: rotate(-10deg);
+
+  /* Opera */
+  -o-transform: rotate(-10deg);
+
+}
+
 
